fix: hide scrollbar on firefox

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,10 @@
 	display: none;
 }
 
+.hideScrollbar {
+	scrollbar-width: none;
+}
+
 .subject {
 	max-width: 80%;
 }
